2025-02-12  Mike FABIAN  <mfabian@redhat.com>

	* Version 1.8.5 released.
	* src/m17n-core.h: (M17NLIB_PATCH_LEVEL): Changed to 5.

2023-08-23  Mike FABIAN  <mfabian@redhat.com>

	* Version 1.8.4 released.
	* src/m17n-core.h: (M17NLIB_PATCH_LEVEL): Changed to 4.
	(M17NLIB_VERSION_NAME): changed to "1.8.4"
	* src/m17n-core.h: Fix “typedef in m17n-core.h causing error when compiling with C++ code”
	* src/symbol.h: Fix “typedef in m17n-core.h causing error when compiling with C++ code”

2023-07-25  Mike FABIAN  <mfabian@redhat.com>

	Version 1.8.3 released.

	* m17n-core.h (M17NLIB_PATCH_LEVEL): Changed to 3.
	(M17NLIB_VERSION_NAME): changed to "1.8.3"

2023-06-22  K. Handa  <handa@gnu.org>

	* charset.c, chartab.c, coding.c, database.c, draw.c, face.c,
	input.c, m17n-core.c, m17n-core.h, m17n-flt.h, m17n-gui.h,
	symbol.h: Fix doxygen tags.

2023-06-21  K. Handa  <handa@gnu.org>

	* *.[ch]: Change encoding of all source files from EUC-JP to UTF-8.

	* m17n-core.h, language.c: Fix doxygen tag.

2023-05-09  Mike FABIAN  <mfabian@redhat.com>

	Version 1.8.2 released.

	* m17n-core.h (M17NLIB_PATCH_LEVEL): Changed to 2.

2023-05-05  Mike FABIAN  <mfabian@redhat.com>

	Version 1.8.1 released.

	* m17n-core.h (M17NLIB_PATCH_LEVEL): Changed to 2.
	(M17NLIB_VERSION_NAME): changed to "1.8.2"

2023-05-04  Florian Weimer  <fweimer@redhat.com>

	* example/medit.c: Add missing int (Savannah bug #64106)

2020-03-08  handa  <handa@gnu.org>

	* mtext.c: Fix typo.

2019-06-18  Werner LEMBERG <wl@gnu.org>

	* m17n-core.c (m17n_object_unref): Fix typo.

2019-05-01  Mike FABIAN  <mfabian@redhat.com>

	* m17n-core.c (m17n_object_unref): Avoid crash even if the given
	OBJECT is null.

2018-10-22  K. Handa  <handa@gnu.org>

	* chartab.c (dump_sub_chartab): Use %p directive to print a
	pointer value.

2018-02-08  K. Handa  <handa@gnu.org>

	Version 1.8.0 released.

	* m17n-core.h (M17NLIB_MINOR_VERSION): Changed to 8.
	(M17NLIB_PATCH_LEVEL): Changed to 0.