@@ -1,3 +1,9 @@
+2025-06-04  K. Handa  <handa@gnu.org>
+
+	* input.c (regularize_action): Do not update the element of
+	action_list if the element is a symbol that is defined as a
+	variable.
+
 2025-02-12  Mike FABIAN  <mfabian@redhat.com>
 
 	* Version 1.8.5 released.
